# GatorGuide

./: .buildinfo  .gitignore  api_usage.html  cicd.py  course_endpoints.html  db_engine.html  exceptions.html  genindex.html  index.html  major_endpoints.html  models.html  objects.inv  py-modindex.html  readme.md  search.html  searchindex.js  todo.html  user_endpoints.html
.doctrees/: api_usage.doctree  course_endpoints.doctree  db_engine.doctree  environment.pickle  exceptions.doctree  index.doctree  major_endpoints.doctree  models.doctree  todo.doctree  user_endpoints.doctree
.github/workflows/: documentation.yml  publish.yml  python_testing.yml
_sources/: api_usage.rst.txt  course_endpoints.rst.txt  db_engine.rst.txt  exceptions.rst.txt  index.rst.txt  major_endpoints.rst.txt  models.rst.txt  user_endpoints.rst.txt
backend/: pyproject.toml  requirements.dev.txt  requirements.txt
backend/docs/source/: conf.py  db_engine.rst  index.rst  test.rst
backend/src/GatorGuide/api/: db_dependency.py  main.py
backend/src/GatorGuide/api/routes/: courses.py  majors.py  users.py
backend/src/GatorGuide/database/: __init__.py  build_db.py  courses.json  create_and_populate.py  create_db.py  db_engine.py  exceptions.py  gather_courses.py  models.py  operations.py  parse_prereqs.py  response_models.py  sandbox.py  test_commands.py
backend/src/GatorGuide/database/workflow/: create.py  populate_courses.py  populate_majors.py
docs/source/: index.rst  todo.rst
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  fetch.tsx  (+3 more)
(+41 files in other folders)
